[package]
name = "maybe-impl"
version = "0.1.0"
edition = "2018"
authors = ["Chris Martinez <chris.s.martinez@hotmail.com>"]
description = "Provides support to conditionally implement one or more traits"
keywords = ["macro", "trait", "conditional"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/commonsensesoftware/maybe-impl"

[lib]
name = "maybe_impl"
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

[dev-dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }